# 2d-thermal-transfer

./: .gitignore  CMakeLists.txt  README.md  default.cfg  plot.py
src/: CMakeLists.txt  config.f95  main.f95  multidim.f95  precision.f95  tridiagonal.f95
